Fix container distortion

--- a/src/assets/App.css
+++ b/src/assets/App.css
@@ -20,17 +20,3 @@
 .section {
   margin-bottom: 0.938rem; /* 15px */
 }
-
-.MainPane-container {
-  height: 38.437rem; /* 615px */
-  margin-bottom: 0.938rem; /* 15px */
-}
-
-.HourlyForecast-container {
-  height: 9.625rem; /* 160px */
-  margin-bottom: 0.938rem; /* 15px */
-}
-
-.FiveDayForecast-container {
-  height: 36.25rem; /* 610px */
-}
