--- a/src/components/MainPane/style.css
+++ b/src/components/MainPane/style.css
@@ -3,7 +3,7 @@
   justify-content: center;
   align-items: center; */
   width: 23.438rem; /* 375px */
-  height: 38.437rem; /* 615px */
+  height: 43rem; /* 688px */
   background-color: #133C55;
   color: white;
   text-align: center;
